# cnc-project

./: CMakeLists.txt  README.md
cmake-lists-files/: custom-avr.cmake  generic-gcc-avr.cmake
sender/: sender.py
simulator/: CMakeLists.txt  plannerFunctionalTest.c  plannerFunctionalTest.h  plannerVisualizer.c  plannerVisualizer.h  simulatorMain.c  testCommandYoda.h  testCommands.h  testCommandsFull.h
src/: CMakeLists.txt  bits.c  bits.h  delay.h  main.c
src/core/: core.c  core.h
src/gcode/: executor.c  executor.h  parser.c  parser.h
src/planner/: arc.c  arc.h  linear.c  linear.h  planner.h
src/serial/: atmega32_adapter.c  atmega32_adapter.h  uart.c  uart.h
src/servo/: atmega_adapter.c  atmega_adapter.h  driver.c  driver.h  pwm_calculator.c  pwm_calculator.h
src/stepper/: enums.h  software_driver.c  software_driver.h  stepper.c  stepper.h
src/stepper/driver/: hardware_driver.c  hardware_driver.h  software_driver.c  software_driver.h
test/: CMakeLists.txt  main.c  plannerFunctionalTest.c  plannerFunctionalTest.h  plannerVisualizer.c  plannerVisualizer.h  testCommands.h
test/gcode/: executorTest.c  executorTest.h  parser.c  parser.h
test/serial/: uart_test.c  uart_test.h
test/servo/: driver_test.c  driver_test.h  pwm_calculator_test.c  pwm_calculator_test.h
test/stepper/: hardware_driver_test.c  hardware_driver_test.h  software_driver.c  software_driver.h
test/stubs/util/: atomic.h
